--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -128,6 +128,7 @@
     padding: 12px 16px;
     font-size: 9px;
     align-self: center;
+    border-radius: 16px 16px 16px 16px !important;
     margin-top: 24px !important;
   }
 }
